--- a/app/src/main/res/drawable/bg_top_curve_right_outlined.xml
+++ b/app/src/main/res/drawable/bg_top_curve_right_outlined.xml
@@ -5,8 +5,8 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/black" />
-            <solid android:color="@color/transparent" />
+                android:color="@color/color_CFDAE5" />
+            <solid android:color="@color/color_CFDAE5" />
             <corners
                 android:topRightRadius="58dp" />
         </shape>
