--- a/app/src/main/res/drawable/bg_circle.xml
+++ b/app/src/main/res/drawable/bg_circle.xml
@@ -6,9 +6,9 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/black" />
+        android:color="@color/colorPrimary" />
 
     <solid
-        android:color="@color/app_bg"/>
+        android:color="@color/colorPrimary"/>
 
 </shape>
