--- a/app/src/main/res/drawable/bg_order_details.xml
+++ b/app/src/main/res/drawable/bg_order_details.xml
@@ -8,6 +8,6 @@
         android:width="1dp"
         android:color="@color/bg_stroke_color" />
 
-    <solid android:color="@color/transparent" />
+    <solid android:color="#F8FAFF" />
 
 </shape>
