--- a/app/src/main/res/layout/activity_prepare_shipment.xml
+++ b/app/src/main/res/layout/activity_prepare_shipment.xml
@@ -1,137 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".activity.PrepareShipmentActivity">
+    android:background="@color/app_bg"
+    tools:context=".activity.OrderSearchActivity">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="@color/app_color"
-        android:gravity="center"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_layout" />
 
-        <ImageButton
-            android:id="@+id/imageButtonBack"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@android:color/transparent"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/back_24"
-            tools:ignore="ContentDescription" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/textViewTitle"
-            style="@style/ToolbarTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textColor="@color/white"
-            android:text="@string/prepare_shipment" />
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <RadioGroup
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:id="@+id/orderButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:background="@drawable/radio_selector"
-            android:button="@android:color/transparent"
-            android:elevation="4dp"
-            android:padding="16dp"
-            android:text="@string/order"
-            android:textAllCaps="true"
-            android:textColor="@drawable/text_color"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <RadioButton
-            android:id="@+id/customerButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:background="@drawable/radio_selector"
-            android:button="@android:color/transparent"
-            android:elevation="4dp"
-            android:padding="16dp"
-            android:text="@string/customer"
-            android:textAllCaps="true"
-            android:textColor="@drawable/text_color"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <RadioButton
-            android:id="@+id/carrierButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:background="@drawable/radio_selector"
-            android:button="@android:color/transparent"
-            android:elevation="4dp"
-            android:padding="16dp"
-            android:text="@string/carrier"
-            android:textAllCaps="true"
-            android:textColor="@drawable/text_color"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-    </RadioGroup>
+        android:layout_marginBottom="@dimen/_12sdp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@color/tab_selected_text_color"
+        app:tabIndicatorHeight="@dimen/_2sdp"
+        app:tabMode="fixed"
+        app:textAllCaps="false"
+        app:tabSelectedTextColor="@color/tab_selected_text_color"
+        app:tabTextColor="@color/tab_unselected_text_color" />
 
     <EditText
-        android:id="@+id/searchEditText"
+        android:singleLine="true"
+        android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:background="@drawable/search_edittext_border"
+        android:layout_marginHorizontal="@dimen/_24sdp"
+        android:background="@drawable/bg_edit_text"
         android:drawableStart="@drawable/ic_search"
-        android:drawablePadding="8dp"
-        android:fontFamily="sans-serif"
-        android:hint="@string/search"
-        android:importantForAutofill="no"
-        android:inputType="text"
-        android:padding="12dp"
+        android:drawablePadding="12dp"
+        android:hint="@string/search_ellipse"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="14dp"
+        android:textAppearance="@style/inter_400_12_16"
         android:textColor="@color/black"
-        android:textColorHint="@color/gray" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcvOrders"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        android:layout_weight="1"
-        tools:itemCount="2"
-        tools:listitem="@layout/item_order" />
-
-    <Button
-        android:id="@+id/orderDetailsButton"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_background"
-        android:text="ORDER DETAILS"
-        android:textColor="@drawable/button_text_color"
-        android:padding="@dimen/_12sdp"
-        android:layout_margin="@dimen/_12sdp"
-        android:textStyle="bold" />
+        android:text="Order Search"
+        android:textSize="@dimen/_16ssp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_marginHorizontal="@dimen/_24sdp"
+        android:layout_marginVertical="@dimen/_12sdp"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvOrders"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/orderDetailsButton"
+            tools:itemCount="4"
+            tools:listitem="@layout/item_search" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_alignParentBottom="true"
+            android:id="@+id/orderDetailsButton"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_42sdp"
+            android:background="@drawable/button_background"
+            android:text="@string/view_order_details"
+            android:enabled="false"
+            android:textAllCaps="false"
+            android:layout_gravity="bottom"
+            android:textColor="@drawable/button_text_color"
+            android:padding="@dimen/_12sdp"
+            android:layout_marginHorizontal="@dimen/_24sdp"
+            android:layout_marginVertical="@dimen/_12sdp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
