--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -5,33 +5,50 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:id="@+id/itemMaintenanceLogs"
+        android:id="@+id/lnrItem"
+        android:padding="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginHorizontal="@dimen/_24sdp"
+        android:layout_marginBottom="@dimen/_12sdp"
         android:background="@drawable/bg_filled_outlined"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="12dp"
-            android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+            <LinearLayout
                 android:layout_weight="1"
-                android:fontFamily="@font/inter_regular"
-                android:textColor="@color/secondary_text_color"
-                android:text="Order:" />
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/inter_regular"
+                    android:textColor="@color/secondary_text_color"
+                    android:text="Order:" />
+
+
+                <TextView
+                    android:id="@+id/orderId"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:fontFamily="@font/inter_bold"
+                    android:textColor="@color/secondary_dark_text_color"
+                    tools:text="I23246T5" />
+
+            </LinearLayout>
 
             <TextView
+                android:gravity="end"
                 android:id="@+id/txtLastUpdatedTime"
                 android:layout_gravity="center"
                 android:fontFamily="@font/inter_regular"
@@ -42,34 +59,42 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/txtDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
-            android:layout_marginTop="@dimen/_4sdp"
-            android:textColor="@color/secondary_dark_text_color"
-            tools:text="I23246T5" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="12dp"
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+            <LinearLayout
                 android:layout_weight="1"
-                android:fontFamily="@font/inter_regular"
-                android:textColor="@color/secondary_text_color"
-                android:text="Carrier:" />
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/inter_regular"
+                    android:textColor="@color/secondary_text_color"
+                    android:text="Carrier:" />
+
+
+                <TextView
+                    android:id="@+id/carrierName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:fontFamily="@font/inter_bold"
+                    android:textColor="@color/secondary_dark_text_color"
+                    android:text="Cleantec Logistics" />
+
+            </LinearLayout>
 
             <TextView
+                android:gravity="end"
                 android:layout_gravity="center"
                 android:fontFamily="@font/inter_regular"
                 android:layout_width="wrap_content"
@@ -79,33 +104,42 @@
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
-            android:layout_marginTop="@dimen/_4sdp"
-            android:textColor="@color/secondary_dark_text_color"
-            tools:text="Cleantec Logistics" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="12dp"
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+            <LinearLayout
                 android:layout_weight="1"
-                android:fontFamily="@font/inter_regular"
-                android:textColor="@color/secondary_text_color"
-                android:text="Request By:" />
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/inter_regular"
+                    android:textColor="@color/secondary_text_color"
+                    android:text="Request By:" />
+
+
+                <TextView
+                    android:id="@+id/reqBy"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:fontFamily="@font/inter_bold"
+                    android:textColor="@color/secondary_dark_text_color"
+                    tools:text="Tony Blair-Texas Grains" />
+
+            </LinearLayout>
 
             <TextView
+                android:gravity="end"
                 android:layout_gravity="center"
                 android:fontFamily="@font/inter_regular"
                 android:layout_width="wrap_content"
@@ -114,16 +148,6 @@
                 tools:text="12/12/2024" />
 
         </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
-            android:layout_marginTop="@dimen/_4sdp"
-            android:layout_marginBottom="16dp"
-            android:textColor="@color/secondary_dark_text_color"
-            tools:text="Tony Blair-Texas Grains" />
-
 
     </LinearLayout>
 
