--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="colorPrimary">@color/dApp_color</item>
-        <item name="colorPrimaryVariant">@color/dApp_color</item>
+        <item name="colorPrimaryVariant">@color/app_color</item>
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
     </style>
