--- a/app/src/main/res/values/typography.xml
+++ b/app/src/main/res/values/typography.xml
@@ -1,10 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="inter_400_10_16">
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="fontWeight">400</item>
+        <item name="android:textSize">@dimen/_10sdp</item>
+        <item name="lineHeight">@dimen/_16sdp</item>
+    </style>
 
     <style name="inter_400_12_16">
         <item name="fontFamily">@font/inter_medium</item>
         <item name="fontWeight">400</item>
-        <item name="android:textSize">12sp</item>
-        <item name="lineHeight">16sp</item>
+        <item name="android:textSize">@dimen/_12sdp</item>
+        <item name="lineHeight">@dimen/_16sdp</item>
     </style>
+
+    <style name="inter_400_16_12">
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="fontWeight">400</item>
+        <item name="android:textSize">@dimen/_16sdp</item>
+        <item name="lineHeight">@dimen/_12sdp</item>
+    </style>
+
+    <style name="inter_400_18_12">
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="fontWeight">400</item>
+        <item name="android:textSize">@dimen/_16sdp</item>
+        <item name="lineHeight">@dimen/_12sdp</item>
+    </style>
+
+    <style name="inter_600_12_12">
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="fontWeight">600</item>
+        <item name="android:textSize">@dimen/_12sdp</item>
+        <item name="lineHeight">@dimen/_12sdp</item>
+    </style>
+
+    <style name="inter_700_14_12">
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="fontWeight">700</item>
+        <item name="android:textSize">@dimen/_14sdp</item>
+        <item name="lineHeight">@dimen/_12sdp</item>
+    </style>
+
+    <style name="inter_700_12_10">
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="fontWeight">700</item>
+        <item name="android:textSize">@dimen/_12sdp</item>
+        <item name="lineHeight">@dimen/_10sdp</item>
+    </style>
+
 </resources>
