--- a/app/src/main/res/layout/activity_bol.xml
+++ b/app/src/main/res/layout/activity_bol.xml
@@ -8,42 +8,9 @@
     android:orientation="vertical"
     tools:context=".activity.OrderDetailActivity">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="@color/app_color"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
-
-        <ImageButton
-            android:id="@+id/imageButtonBack"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center_vertical"
-            android:background="@android:color/transparent"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/back_24"
-            tools:ignore="ContentDescription" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/textViewTitle"
-            style="@style/ToolbarTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:text="Bill of Lading"
-            android:textColor="@color/white" />
-
-    </FrameLayout>
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_layout" />
 
     <LinearLayout
         android:id="@+id/createBol"
@@ -73,7 +40,7 @@
                 android:elevation="1dp"
                 android:importantForAccessibility="no"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_files" />
+                android:src="@drawable/ic_create_bol" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -134,7 +101,7 @@
                 android:elevation="1dp"
                 android:importantForAccessibility="no"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_files" />
+                android:src="@drawable/ic_look_bol" />
 
             <LinearLayout
                 android:layout_width="match_parent"
