--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -170,6 +170,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/inter_medium"
                         android:gravity="center"
+                        android:layout_marginStart="@dimen/_6sdp"
                         android:text="@string/receiving"
                         android:textAppearance="@style/inter_400_16_12"
                         android:textColor="@color/colorPrimary" />
