--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/srNo"
             android:layout_width="@dimen/_14sdp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding_inside_table_field"
@@ -29,7 +30,7 @@
             android:background="@color/bg_stroke_color" />
 
         <TextView
-            android:id="@+id/orderId"
+            android:id="@+id/itemName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/padding_inside_table_field"
@@ -48,6 +49,7 @@
             android:background="@color/bg_stroke_color" />
 
         <TextView
+            android:id="@+id/txtQty"
             android:layout_width="@dimen/_100sdp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/padding_inside_table_field"
@@ -60,5 +62,11 @@
             android:letterSpacing="-0.01" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <View
+        android:id="@+id/views"
+        android:background="@color/bg_stroke_color"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_1sdp"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
