--- a/app/src/main/res/layout/device_list.xml
+++ b/app/src/main/res/layout/device_list.xml
@@ -41,6 +41,9 @@
         android:orientation="vertical">
 
         <ListView
+            android:scrollbars="none"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="@dimen/_8sdp"
             android:id="@+id/new_devices"
             android:layout_width="match_parent"
             android:layout_height="0dp"
