--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -137,7 +137,6 @@
     <color name="purple_200">#ffbb86fc</color>
     <color name="purple_500">#ff6200ee</color>
     <color name="purple_700">#ff3700b3</color>
-    <color name="red">#ffff0909</color>
     <color name="red_free">#ffe34c5e</color>
     <color name="rfidscanner_background">#ffffff</color>
     <color name="ripple_material_dark">#33ffffff</color>
@@ -172,4 +171,11 @@
     <color name="color_CFDAE5">#CFDAE5</color>
     <color name="color_909090">#909090</color>
     <color name="color_181818">#181818</color>
+    <color name="color_D32F2F">#D32F2F</color>
+    <color name="color_388E3C">#388E3C</color>
+    <color name="color_ff0000">#FF0000</color>
+    <color name="color_EFF0F4">#EFF0F4</color>
+    <color name="color_D9D9D9">#D9D9D9</color>
+    <color name="color_0F0F0F">#0F0F0F</color>
+
 </resources>
