--- a/app/src/main/res/layout/fragment_inventory_list.xml
+++ b/app/src/main/res/layout/fragment_inventory_list.xml
@@ -16,7 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@color/dApp_color"
+            android:background="@color/app_color"
             android:orientation="horizontal"
             android:paddingHorizontal="20dp">
 
