--- a/app/src/main/res/layout/layout_no_item.xml
+++ b/app/src/main/res/layout/layout_no_item.xml
@@ -7,10 +7,11 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/noDataText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:fontFamily="@font/inter_regular"
+        android:fontFamily="@font/inter_semi_bold"
         android:letterSpacing="-0.01"
         android:paddingVertical="@dimen/_6sdp"
         android:paddingHorizontal="@dimen/_10sdp"
