--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -60,4 +60,9 @@
     <color name="color_D9D9D9">#D9D9D9</color>
     <color name="color_0F0F0F">#0F0F0F</color>
 
+    <color name="background_stroke_color">#EBEBEB</color>
+    <color name="placeholderTextColor">#868686</color>
+    <color name="color_121212">#121212</color>
+    <color name="color_787679">#787679</color>
+
 </resources>
