--- a/app/src/main/res/layout/fragment_inventory_items.xml
+++ b/app/src/main/res/layout/fragment_inventory_items.xml
@@ -215,6 +215,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/txtFrom"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -226,7 +227,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/txtLastUpdatedTime"
+                    android:id="@+id/txtLast"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -252,6 +253,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/txtTo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -263,6 +265,7 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
